--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The title is important for SEO and also appears on the tab.</li>
+          <li>Semantic elements tell the browser how to structure the content.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b "branch-name": creates a new branch and switches to it</li>
+          <li>git add -A: adds all changed files in the working directory to git staging</li>
+          <li> git commit -m "notes": commits the changes in the current branch to the repo</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScipt</h2>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
     </main>
 
     <footer>
