--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScipt</h2>
         <ul>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript requires declaration of variables.</li>
+          <li>Lists can contain multiple different types of data (string, number, etc.)</li>
+          <li>JS functions are designated by {}, lines of code must end with ;</li>
         </ul>
       </section>
     </main>
